# hyprwiping

./: .gitignore  CLAUDE.md  CMakeLists.txt
protocol/: wlr-layer-shell-unstable-v1.xml
scripts/: wiping-start  wiping-stop
shaders/: blur-drift.frag  bouncing-ball.frag  debug-solid.frag  debug-time.frag  pixel-decay.frag  pixel-sort.frag  rain.frag  reaction-diffusion-display.frag  reaction-diffusion.frag  test-stripe.frag  zoom-tunnel.frag
src/: main.cpp  render.cpp  render.h  wayland.cpp  wayland.h
